--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
         <div class="section-title">
           <h2>Mis Hobbies y pasiones</h2>
-          <p>Soy un muy apasionado con todo lo que hago dia.</p>
+          <p>Soy un muy apasionado con todo lo que hago dia a dia.</p>
         </div>
 
         <div class="row no-gutters">
