--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Elvis Puma</h1>
-      <p>Yo soy <span class="typed" data-typed-items="Frontend Developer, Estudiante de ingeniería Civil, Freelancer, autodidacta"></span></p>
+      <p>Soy <span class="typed" data-typed-items="Frontend Developer, Estudiante de ingeniería Civil, Freelancer, autodidacta"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -101,16 +101,17 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Nacimiento:</strong> <span>19 Nov. 1999</span></li>
+  
                   <li><i class="bi bi-chevron-right"></i> <strong>Sitio web:</strong> <span>www.ingstark.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Celular:</strong> <span>913742547</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Lima, Perú</span></li>
+                  
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Edad: </strong> <span>22</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Grado de estudio:</strong> <span>Egresado de EE.GG.CC</span></li>
+                  
+                  <li><i class="bi bi-chevron-right"></i> <strong>Facultadad:</strong> <span>Ciencias e Ingenierías PUCP</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Correo PUCP:</strong> <span>a20196184@pucp.edu.pe</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponible</span></li>
                 </ul>
@@ -131,7 +132,7 @@
 
         <div class="section-title">
           <h2>Mis Hobbies y pasiones</h2>
-          <p>Soy un muy apasionado con todo lo que hago dia.</p>
+          <p>Soy un muy apasionado con todo lo que hago dia a dia.</p>
         </div>
 
         <div class="row no-gutters">
