--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <div class="col-lg-6">
                 <ul>
                   
-                  <li><i class="bi bi-chevron-right"></i> <strong>Facultadad:</strong> <span>Ciencias e Ingenierías PUCP</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Facultad:</strong> <span>Ciencias e Ingenierías PUCP</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Correo PUCP:</strong> <span>a20196184@pucp.edu.pe</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponible</span></li>
                 </ul>
