--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong> Ayudar a mi familia y entorno </strong>a mejorar en sus proyectos personales</p>
+              <p><strong> Ayudar a mi familia y entorno </strong>a mejorar en sus proyectos</p>
             </div>
           </div>
 
@@ -157,7 +157,7 @@
             <div class="count-box">
               <i class="bi bi-headset"></i>
               <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Escuchar música</strong>: de todo tipo :) </p>
+              <p><strong>programación</strong>  de apliaciones </p>
             </div>
           </div>
 
@@ -165,7 +165,7 @@
             <div class="count-box">
               <i class="bi bi-people"></i>
               <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Trabajo duro</strong> diariamente para lograr mis sueños </p>
+              <p><strong>Cine:</strong> Películas - series </p>
             </div>
           </div>
 
@@ -320,7 +320,7 @@
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
-                <a href="https://walyproyect.online/" target="_blank" title="Ver proyecto"><i class="bx bx-link"></i>Ver</a>
+                <a href="https://merchastore.github.io/estudiaconciencias//" target="_blank" title="Ver proyecto"><i class="bx bx-link"></i>Ver</a>
               </div>
             </div>
           </div>
@@ -329,8 +329,17 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Fotografia"><i class="bx bx-plus"></i></a>
                 <a href="https://merchastore.github.io/fotografia/index.html" target="_blank" title="Ver proyecto"><i class="bx bx-link"></i>Ver</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/ingenieronomada.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/ingenieronomada.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Ingeniero Nomada"><i class="bx bx-plus"></i></a>
+                <a href="https://merchastore.github.io/ingenieronomada/" target="_blank" title="Ver proyecto"><i class="bx bx-link"></i>Ver</a>
               </div>
             </div>
           </div>
